Adding new fitur branch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Halo, ini proyek pertama</h1>
+  <h1>Halo, my first project</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis animi distinctio, autem illo maiores officiis veniam?</p>
+  <button>Click Me..</button>
 </body>
 </html>
